h1. CHANGELOG

h2. 0.0.4 unreleased

* fix permalink on welcome page for Facebook metadata
* rename 'introdution' to 'about' on welcome page
* change Facebook 'recommend' link location on articles pages
* reduce H1 tags to just one on a page

h2. 0.0.3 September 25, 2011

* improve Facebook OpenGraph metadata for templates
* add Google Analytics script to all templates
* rework home page template
* add missing stylesheet for home page

h2. 0.0.2 September 24, 2011

* fix indentation of 'body' tag in layouts and templates
* strip '.html' file extension if submitted in article or offerpage filename

h2. 0.0.1 August 10, 2011

* Initial release